# lib_mysqludf_amqp

./: .gitignore  COPYING  Makefile.am  README.md  configure.ac  installdb.sql  lib_mysqludf_amqp.c  lib_mysqludf_amqp.h  lib_mysqludf_amqp_info.c  lib_mysqludf_amqp_sendjson.c  lib_mysqludf_amqp_sendstring.c  send.c  send.h  uninstalldb.sql  uuid.c  uuid.h
